--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EvergreenSky</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
   <header>
     <h1>EvergreenSky</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="characters/mairu.html">Characters</a></li>
+        <li><a href="midori.html">Characters</a></li>
         <li><a href="lore/timeline.html">Lore</a></li>
         <li><a href="gallery/index.html">Gallery</a></li>
         <li><a href="extras/index.html">Extras</a></li>
@@ -32,5 +30,4 @@
     <p>&copy; 2025 EvergreenSky • Built with love</p>
   </footer>
 </body>
-
 </html>
