--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="midori.html">Characters</a></li>
+        <li><a href="characters/midori.html">Characters</a></li>
         <li><a href="lore/timeline.html">Lore</a></li>
         <li><a href="gallery/index.html">Gallery</a></li>
         <li><a href="extras/index.html">Extras</a></li>
