--- a/characters/midori.html
+++ b/characters/midori.html
@@ -25,7 +25,7 @@
 
   <main>
     <section class="character-profile">
-      <img src="..midori-prof.png" alt="Midori Takamine" />
+      <img src="../images/midori-prof.png" alt="Midori Takamine" />
       <div class="character-info">
         <h2>高峯 翠 (Takamine Midori)</h2>
         <p><strong>CV:</strong> Watanabe Takumi<br>
