--- a/characters/midori.html
+++ b/characters/midori.html
@@ -28,7 +28,7 @@
     <div class="character-background"></div> <!-- green strip -->
 
     <section class="character-profile">
-      <img src="images/midori-prof.png" alt="Midori Takamine" class="midori-img" />
+      <img src="images/midori-profile.png" alt="Midori Takamine" class="midori-img" />
 
       <div class="character-info">
         <h2>高峯 翠 (Takamine Midori)</h2>
